# Fresh_Excel

./: .gitignore  README.md  main.py  pyproject.toml
app/routers/: cleaner.py
app/services/: cleaner_service.py
static/: index.html
