[project]
name = "fresh-excel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=7.4.3",
    "fastapi>=0.136.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "python-multipart>=0.0.26",
    "uvicorn>=0.45.0",
]
